Bug 286259 - docx: Color of the text is wrong.
Summary: docx: Color of the text is wrong.
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: docx (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-10 11:57 UTC by swathi
Modified: 2011-12-01 08:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot in MS Office (278.09 KB, image/png)
2011-11-10 11:57 UTC, swathi
Details
Screenshot in Calligra Words (187.34 KB, image/png)
2011-11-10 11:57 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-11-10 11:57:15 UTC
Created attachment 65473 [details]
Screenshot in MS Office

Version: git checkout aac9b32c182585abca4455b7c67016d61340a555
      (Using KDE 4.6.3)                
     OS: Kubuntu 11.04
Test data is in Word 2007 format.
Open the same document in Calligra Words. 
Check the display of the word “The design”.

Expected outcome:
The word “The design” should be displayed in black color.

Actual outcome:
“The design” is displaying in blue color..
Frequency:
Always
Comment 1 swathi 2011-11-10 11:57:38 UTC
Created attachment 65474 [details]
Screenshot in Calligra Words
Comment 2 Camilla Boemann 2011-11-10 12:00:44 UTC
I've run calligraconverter on it and the font color is set to blue in the auto paragraph style, so definitely a filter issue
Comment 3 Matus Uzak 2011-11-18 04:36:38 UTC
Git commit 04e59e47bb8d67188078946877edb0d5bd3d9ef3 by Matus Uzak.
Committed on 18/11/2011 at 05:29.
Pushed by uzak into branch 'master'.

docx: Write text-properties only in case of empty paragraphs.

* From MSWord point of view the text-properties in a paragraph style are meant for
  the paragraph mark and should not be used to format any of the text chunks.

* text-properties of the paragraph mark are used to format the list label, so they
  are part of the inheritance hierarchy, which I broke at the moment.
  I will fix it ASAP.

* Sync with the DOC filter.

BUG:286259

M  +6    -0    filters/libmsooxml/MsooXmlUtils.h
M  +10   -1    filters/words/docx/DocxXmlDocumentReader.cpp

http://commits.kde.org/calligra/04e59e47bb8d67188078946877edb0d5bd3d9ef3
Comment 4 swathi 2011-12-01 08:11:35 UTC
Verified in 5992551fa6b6bf4e2d716728e086fd48ff905e33 .