docx: Write text-properties only in case of empty paragraphs.

* From MSWord point of view the text-properties in a paragraph style are meant for
  the paragraph mark and should not be used to format any of the text chunks.

* text-properties of the paragraph mark are used to format the list label, so they
  are part of the inheritance hierarchy, which I broke at the moment.
  I will fix it ASAP.

* Sync with the DOC filter.

BUG:286259